<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!--Header-->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/quantity_icon"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_quantity_header"
                android:textSize="@dimen/text_header_one"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_header_three"
            android:textStyle="bold"
            android:text="@string/modify_unit_quantity_sub_header"
            tools:ignore="HardcodedText,SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modify_unit_quantity_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:paddingBottom="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit_quantity_prompt"
                android:background="@color/transparent"
                android:inputType="numberDecimal"
                android:paddingLeft="@dimen/padding_20"
                android:paddingTop="@dimen/padding_15"
                android:paddingRight="@dimen/padding_20"
                android:paddingBottom="@dimen/padding_15"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/modify_unit_quantity_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_20"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:text="@string/modify_unit_quantity_save_unit_quantity"
        android:textColor="@color/white"/>



</LinearLayout>