<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_15">
        <!--Photo and Greeting-->
        <FrameLayout
            android:id="@+id/author_profile_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginBottom="85dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/author_bg_image" />

        </FrameLayout>
        <!--Photo-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/author_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/white"
            android:src="@drawable/default_image"
            app:civ_border_width="4dp" />

    </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/author_profile_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_name"
                android:textColor="@color/santas_gray"
                android:textSize="@dimen/text_header"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_5"
                android:fontFamily="sans-serif"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author_description"
                android:textColor="@color/santas_gray"
                android:textSize="@dimen/text_header_four"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginEnd="@dimen/margin_50"
                android:padding="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                android:fontFamily="sans-serif" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/fb_link_botton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="@dimen/margin_15"
                android:src="@drawable/fb_logo" />
            <ImageView
                android:id="@+id/linkedin_link_botton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="@dimen/margin_15"
                android:src="@drawable/linked_in"/>
            <ImageView
                android:id="@+id/github_link_botton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="@dimen/margin_15"
                android:src="@drawable/github_logo"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/author_date_create"/>
    </LinearLayout>
</ScrollView>