<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cultured"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderCircularHandlerEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="2dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorSelectedColor="@color/gunmetal"
            app:sliderIndicatorUnselectedColor="@color/mantle"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true"/>
        </FrameLayout>

        <GridLayout
            android:id="@+id/choice_grid"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/input_new_item_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/add_item" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_input_item"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_item_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/view_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_view_item"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/modify_item_price_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/price_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_modify_price"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/modify_item_quantity_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/quantity_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_modify_quantity"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/remove_item_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/remove_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_remove_item"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/authors_info_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_5"
                android:gravity="center"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_10"
                        android:src="@drawable/author_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/fragment_a_author_info"
                        android:textColor="@color/raisin_black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>